# nexus-tools

./: .gitignore  .typos.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  RELEASING.md  STYLE_GUIDE.md  codecov.yml  justfile  readme.md  rust-toolchain.toml
.github/actions/coverage/: action.yml
.github/actions/pre-commit/dependencies/: action.yml
.github/workflows/: coverage-baseline.yml  coverage.yaml  release.yml
crates/exchanges-coinbase/src/: main.rs
crates/exchanges-coinbase/src/tools/: get_product_stats.rs
crates/http/src/: errors.rs  models.rs
crates/llm-openai-chat-completion/: README.md
crates/social-twitter/src/direct_message/: get_conversation_messages.rs  get_conversation_messages_by_id.rs
crates/social-twitter/src/list/: get_list.rs  get_list_members.rs  get_list_tweets.rs  remove_member.rs
crates/social-twitter/src/media/: models.rs  upload_media.rs
crates/social-twitter/src/tweet/: get_tweet.rs  get_tweets.rs
crates/storage-walrus/src/: upload_file.rs
crates/templating-jinja/: Cargo.toml
crates/templating-jinja/src/: main.rs
http/src/: http.rs
social-twitter/src/list/: get_user_lists.rs  update_list.rs
social-twitter/src/tweet/: get_recent_tweet_count.rs  post_tweet.rs
social-twitter/src/user/: get_user_by_id.rs  get_user_by_username.rs
templating-jinja/: README.md
tools/http/src/: errors.rs  http.rs  http_client.rs
tools/llm-openai-chat-completion/: Cargo.toml
tools/llm-openai-chat-completion/src/: main.rs
tools/social-twitter/: Cargo.toml
tools/social-twitter/src/: main.rs
tools/social-twitter/src/tweet/: get_mentioned_tweets.rs  get_recent_search_tweets.rs  get_user_tweets.rs  models.rs
tools/storage-walrus/src/: upload_json.rs
tools/templating-jinja/src/: template.rs
