[workspace]
resolver = "3"
members = ["tools/*"]

[workspace.package]
edition = "2021" # "2024" does not compile.
version = "0.7.0"
repository = "https://github.com/Talus-Network/nexus-sdk"
homepage = "https://talus.network"
license = "Apache-2.0"
readme = "README.md"
authors = ["Talus Engineering <engineering@taluslabs.xyz>"]
keywords = ["nexus", "talus", "tools", "walrus"]
categories = []

[workspace.dependencies]
anyhow = "1.0.97"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.28.3"
log = "^0.4.26"
minijinja = "2.8.0"
mockito = "1.7.0"
portpicker = "0.1.1"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
rstest = "0.25.0"
schemars = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2.0"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0.12"
tokio = { version = "1.49.0", features = ["full"] }
warp = "0.3.7"

# === Nexus deps ===
[workspace.dependencies.nexus-sdk]
features = ["full"]
# For local dev convenience
# path = "../../nexus-sdk/sdk"
git = "https://github.com/Talus-Network/nexus-sdk"
tag = "v0.7.0"

[workspace.dependencies.nexus-toolkit]
# For local dev convenience
# path = "../../nexus-sdk/toolkit-rust"
git = "https://github.com/Talus-Network/nexus-sdk"
tag = "v0.7.0"


[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = "packed"
# Decrease final binary size
strip = "debuginfo"
# Exit process with SIGABRT when any thread panics
panic = "abort"
