[package]
name = "templating-jinja"
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
minijinja.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

# === Nexus deps ===
nexus-toolkit.workspace = true
nexus-sdk.workspace = true